# ldapeditor

./: README.md  deploy.sh  pom.xml
google_ldap_rs/: Cargo.toml  config.template  google_config.toml
google_ldap_rs/src/: datasource.rs  main.rs  syncer.rs
google_ldap_rs/src/datasource/: contact.rs  ldap.rs  people_api.rs  sync_config.rs
src/main/java/com/caseyandgary/ldapeditor/ldap/: Contact.java  CustomSocketFactory.java  DirContextAdapter.java  LDAPConnector.java  LDAPException.java  Mapping.java  SSLCustomSocketFactory.java
src/main/java/com/caseyandgary/ldapeditor/web/: ContactBean.java  Controller.java
src/main/webapp/: add.jsp  add_old.jsp  departmentkey.html  edit.jsp  edit_old.jsp  index.jsp  ldap.css  menu.jsp  modify_table.jsp  search.jsp  test.jsp
src/main/webapp/WEB-INF/: dept.Employees.txt  dept.MetalsApp.txt  dept.Public.txt  ldap_prop.txt  ou_prop.txt  pioneer.keys  users_prop.txt  web.xml
unused_src/: GoodLDAPConnector.java  Test.java  TestLDAP.java
