[package]
name = "google_ldap_rs"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = "1.48.0"
rocket = "0.5.1"
futures = "0.3.31"

ldap3 = {version="0.12.1"}
serde_json = "1.0.145"
reqwest = { version = "0.12.24",features = ["json"] }
serde_with = "2.0.0"
serde = { version = "1.0.228", features = ["derive"] }
chrono = { version ="0.4.42",features=["serde"]}
config = "0.15.19"
